termino seccion Perfil y logueo

--- a/1erParcial_laboratorio_ii/LesUTN/Properties/Resources.resx
+++ b/1erParcial_laboratorio_ii/LesUTN/Properties/Resources.resx
@@ -118,19 +118,25 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="logoBarUTN" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\logoBarUTN.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="logoFacturacion" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logoFacturacion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="logoStock" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\logoStock.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="logoPerfil" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logoPerfil.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logoStock" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logoStock.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="logoUsuarios" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logoUsuarios.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logoLogout" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logoLogout.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logoBarUTN" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logoBarUTN.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logoSalir" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logoSalir.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
