--- a/1erParcial_laboratorio_ii/LesUTN/Properties/Resources.resx
+++ b/1erParcial_laboratorio_ii/LesUTN/Properties/Resources.resx
@@ -139,4 +139,10 @@
   <data name="logoSalir" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logoSalir.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="efectoSonidoLogueo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\efectoSonidoLogueo.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="efectoSonidoCobro" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\efectoSonidoCobro.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
